<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/default_margin"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formRepresentativeSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_title"
                style="@style/RepresentativeTitle"
                android:text="@string/search_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                style="@style/RepresentativeAddress"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:minHeight="48dp"
                android:text="@{viewModel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                style="@style/RepresentativeAddress"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:minHeight="48dp"
                android:text="@{viewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                style="@style/RepresentativeCity"
                android:autofillHints=""
                android:hint="@string/city"
                android:minHeight="48dp"
                android:text="@{viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                style="@style/RepresentativeState"
                stateValue="@{viewModel.address.state}"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/city"
                app:layout_constraintBottom_toBottomOf="@id/city"/>

            <EditText
                android:id="@+id/zip"
                style="@style/RepresentativeZip"
                android:autofillHints=""
                android:hint="@string/zip"
                android:minHeight="48dp"
                android:text="@{viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                style="@style/Button"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/find_my_representatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                style="@style/Button"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/use_my_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerRepresentativeList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formRepresentativeSearch">

            <TextView
                android:id="@+id/representative_title"
                style="@style/RepresentativeTitle"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRepresentatives"
                style="@style/Empty"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_title" />

            <TextView
                android:id="@+id/textNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_result_no_data"
                android:textAlignment="center"
                app:fadeVisible="@{viewModel.representatives.empty}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:layout_editor_absoluteX="16dp" />

            <ImageView
                android:id="@+id/iconLoadStatus"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/showing_loading_status"
                app:civicsApiStatus="@{viewModel.apiStatus}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>